fix(): refine scrollbar style

--- a/bricks/next-builder/src/builder-container/BrickLibrary/BrickLibrary.module.css
+++ b/bricks/next-builder/src/builder-container/BrickLibrary/BrickLibrary.module.css
@@ -2,6 +2,17 @@
   flex: auto;
   padding: 0;
   overflow: auto;
+
+  &::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+    background-color: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+  }
 }
 
 .groupList,
@@ -22,11 +33,10 @@
   color: var(--antd-text-color-secondary);
 }
 
-
-.columnGroupList{
+.columnGroupList {
   column-gap: 10px;
   column-count: 3;
-  .groupWrapper{
+  .groupWrapper {
     width: 206px;
     break-inside: avoid;
     overflow: hidden;
